--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,40 @@ body{
 .m-etc{
 	display: flex; justify-content: space-between; align-items: center;
 	margin-bottom: 20px;
+	color: rgba(255,255,255,0.6);
+}
+.m-etc>.volume{ position: relative; }
+.m-etc #volume-btn.open{ color: rgba(255,255,255,1); }
+.m-etc #volume-ctrl{
+	width: 30px; height: 135px;
+	background: rgba(0,0,0,0.6);
+	border-radius: 7px;
+	position: absolute; left: -3px; bottom: 40px;
+	display: flex; flex-flow: column wrap; align-items: center;
+}
+.m-etc #volume-ctrl.hidden{ display: none; }
+.m-etc .slider{
+	width: 6px;
+	margin: 12px 0;
+	border-radius: 3px;
+	background: rgba(255,255,255,0.4);
+	flex-grow: 1;
+	position: relative;
+}
+.m-etc .prog{
+	width: 100%; height: 50%;
+	background: #fff;
+	border-radius: inherit;
+	position: absolute; bottom: 0;
+	pointer-events: none;
+}
+.m-etc .pin{
+	width: 16px; height: 16px;
+	border-radius: 50%;
+	background: #fff;
+	position: absolute; left: -5px; top: -8px;
+	pointer-events: all;
+	box-shadow: 0px 1px 1px 0px rgba(0,0,0,0.3);
 }
 .m-progress{
 	width: 100%; height: 6px;
