--- a/css/style.css
+++ b/css/style.css
@@ -115,13 +115,29 @@ body{
 	background: rgba(255,255,255,0.4);
 	position: absolute; left: 50%; top: 50%;
 	transform: translate(-50%,-50%);
+	overflow: hidden;
 }
 .m-etc .volumerange{
-	position: absolute; left: 0; top: 0;
-	direction: rtl;
+	-webkit-appearance: none;
+	width: 121px;
+	position: absolute; right: 1px; top: -4px;
 	background: transparent;
-	transform-origin: center left;
-	transform: rotate(90deg);
+	transform-origin: center right;
+	transform: rotate(270deg);
+	overflow: hidden;
+}
+.m-etc .volumerange:focus{ outline: none; }
+.m-etc .volumerange::-webkit-slider-runnable-track{
+	width: 100%; height: 100%;
+	cursor: pointer;
+	border-radius: 3px;
+}
+.m-etc .volumerange::-webkit-slider-thumb{
+	-webkit-appearance: none;
+	width: 6px; height: 6px;
+	border-radius: 50%;
+	background: #fff;
+	box-shadow: -100vw 0 0 100vw lightpink;
 }
 .m-etc .bar{
 	width: 6px; height: 0%;
@@ -130,7 +146,7 @@ body{
 	position: absolute; bottom: 0;
 	pointer-events: none;
 }
-/* .pin{
+.pin{
 	display: block;
 	width: 16px; height: 16px;
 	border-radius: 50%;
@@ -139,9 +155,6 @@ body{
 	pointer-events: all;
 	box-shadow: 0px 1px 1px 0px rgba(0,0,0,0.3);
 }
-.m-etc .pin{
-	left: -5px; top: -8px;
-} */
 .m-progress{
 	width: 100%; height: 6px;
 	border-radius: 3px;
